Fixed font and spacing

--- a/dmit-1530-lab-01-start/css/styles.css
+++ b/dmit-1530-lab-01-start/css/styles.css
@@ -49,9 +49,10 @@ h2 {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 100;
     margin: 1rem 0;
+    font-family: sans-serif;
 }
 
 a {
